force-app/main/default/objects/CandidateSubCho__c/CandidateSubCho__c.object-meta.xml
<CustomObject>
    <label>CandidateSubCho</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CandidateSubChos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>