force-app/main/default/objects/CandidateSubCho__c/fields/Semester__c.field-meta.xml
<CustomField>
    <fullName>Semester__c</fullName>
    <label>Semester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>first</fullName>
            </value>
            <value>
                <fullName>second</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>