force-app/main/default/objects/CandidateSubCho__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <label>Student</label>
    <referenceTo>Studenten__c</referenceTo>
    <relationshipLabel>CandidateSubChos</relationshipLabel>
    <relationshipName>CandidateSubChos</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>