force-app/main/default/objects/CandidateSubCho__c/fields/subjects__c.field-meta.xml
<CustomField>
    <fullName>subjects__c</fullName>
    <label>subject</label>
    <referenceTo>subject__c</referenceTo>
    <relationshipLabel>CandidateSubChos</relationshipLabel>
    <relationshipName>CandidateSubChos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>